--- a/src/test/java/log4j.properties
+++ b/src/test/java/log4j.properties
@@ -15,10 +15,11 @@
 #
 
 ### Global logging configuration
-log4j.rootLogger=ERROR, stdout
+log4j.rootLogger=ALL, stdout
 
 ### Uncomment for MyBatis logging
-log4j.logger.org.apache.ibatis=ERROR
+log4j.logger.org.apache.ibatis=TRACE
+com.fanhanfei.test=TRACE
 
 ### Console output...
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
